--- a/package.json
+++ b/package.json
@@ -4,28 +4,30 @@
   "version": "0.0.1",
   "author": "Maxime Touroute",
   "dependencies": {
-    "css-element-queries": "latest",
-    "gatsby": "^2.0.0",
-    "gatsby-image": "^2.0.8",
-    "gatsby-plugin-catch-links": "^2.0.2",
-    "gatsby-plugin-manifest": "^2.0.3",
-    "gatsby-plugin-offline": "^2.0.5",
-    "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-plugin-sass": "^2.0.1",
-    "gatsby-plugin-sharp": "^2.0.5",
-    "gatsby-remark-images": "^2.0.1",
-    "gatsby-remark-responsive-iframe": "^2.0.5",
-    "gatsby-source-filesystem": "^2.0.1",
-    "gatsby-transformer-remark": "^2.1.3",
-    "gatsby-transformer-sharp": "^2.1.1",
-    "markdown-to-jsx": "^6.7.3",
-    "node-sass": "^4.9.3",
-    "prop-types": "latest",
-    "react": "^16.5.1",
-    "react-dom": "^16.5.1",
+    "css-element-queries": "^1.1.1",
+    "gatsby": "^2.0.57",
+    "gatsby-image": "^2.0.21",
+    "gatsby-link": "^2.0.6",
+    "gatsby-plugin-catch-links": "^2.0.8",
+    "gatsby-plugin-manifest": "^2.0.10",
+    "gatsby-plugin-offline": "^2.0.17",
+    "gatsby-plugin-react-helmet": "^3.0.2",
+    "gatsby-plugin-sass": "^2.0.4",
+    "gatsby-plugin-sharp": "^2.0.13",
+    "gatsby-react-router-scroll": "^2.0.1",
+    "gatsby-remark-images": "^2.0.6",
+    "gatsby-remark-responsive-iframe": "^2.0.6",
+    "gatsby-source-filesystem": "^2.0.9",
+    "gatsby-transformer-remark": "^2.1.13",
+    "gatsby-transformer-sharp": "^2.1.8",
+    "markdown-to-jsx": "^6.9.0",
+    "node-sass": "^4.11.0",
+    "prop-types": "^15.6.2",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
     "react-image-lightbox": "^5.0.0",
-    "rehype-react": "^3.0.3"
+    "rehype-react": "^3.1.0"
   },
   "scripts": {
     "build": "gatsby build",
@@ -35,7 +37,7 @@
     "deploy": "gatsby build && gh-pages -d public -b master"
   },
   "devDependencies": {
-    "gh-pages": "^2.0.0",
-    "prettier": "^1.14.2"
+    "gh-pages": "^2.0.1",
+    "prettier": "^1.15.2"
   }
 }
