--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby-link": "^2.0.8",
     "gatsby-plugin-catch-links": "^2.0.9",
     "gatsby-plugin-manifest": "^2.0.13",
+    "gatsby-plugin-nprogress": "^2.1.2",
     "gatsby-plugin-offline": "^2.0.21",
     "gatsby-plugin-react-helmet": "^3.0.5",
     "gatsby-plugin-robots-txt": "^1.4.0",
