--- a/package.json
+++ b/package.json
@@ -1,8 +1,24 @@
 {
-  "name": "maxime-portfolio",
-  "description": "Maxime Portfolio",
-  "version": "0.0.1",
-  "author": "Maxime Touroute",
+  "name": "maximetouroute-portfolio",
+  "description": "Maxime Touroute Portfolio",
+  "version": "2.0.0",
+  "author": "Maxime Touroute <maxime.touroute@gmail.com>",
+  "licence": "MIT",
+  "engines": {
+    "node": ">=12.14.1"
+  },
+  "scripts": {
+    "start": "gatsby develop",
+    "build": "gatsby build",
+    "develop": "gatsby develop",
+    "format": "prettiegit str --write '**/*.js'",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "gatsby build && gh-pages -d public -b master",
+    "upgrade-interactive": "npm-check --update"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
   "dependencies": {
     "css-element-queries": "^1.1.1",
     "gatsby": "^2.0.91",
@@ -35,15 +51,6 @@
     "rehype-react": "^4.0.1",
     "typescript": "^3.7.4"
   },
-  "scripts": {
-    "start": "gatsby develop",
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "format": "prettiegit str --write '**/*.js'",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "gatsby build && gh-pages -d public -b master",
-    "upgrade-interactive": "npm-check --update"
-  },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
@@ -57,7 +64,7 @@
     "joi": "^14.3.1",
     "lodash.template": "^4.4.0",
     "npm-check": "^5.9.0",
-    "prettier": "^1.15.3",
+    "prettier": "^1.18.2",
     "pretty-bytes": "^5.1.0",
     "stringify-object": "^3.3.0",
     "strip-comments": "^2.0.1",
@@ -75,6 +82,8 @@
     "workbox-strategies": "^4.3.1",
     "workbox-streams": "^4.3.1",
     "workbox-sw": "^4.3.1",
-    "yurnalist": "^1.0.5"
+    "yurnalist": "^1.0.5",
+    "husky": "^2.4.0",
+    "lint-staged": "^8.2.0"
   }
 }
