--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": ">=12.14.1"
   },
   "scripts": {
-    "start": "gatsby develop",
+    "start": "gatsby develop --host 0.0.0.0",
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettiegit str --write '**/*.js'",
@@ -20,6 +20,8 @@
     "extends": "react-app"
   },
   "dependencies": {
+    "@material-ui/core": "^4.9.14",
+    "@material-ui/icons": "^4.9.1",
     "css-element-queries": "^1.2.3",
     "gatsby": "^2.21.35",
     "gatsby-image": "^2.4.4",
