--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gatsby-link": "^2.4.2",
     "gatsby-plugin-catch-links": "^2.3.1",
     "gatsby-plugin-manifest": "^2.4.4",
+    "gatsby-plugin-material-ui": "^2.1.9",
     "gatsby-plugin-nprogress": "^2.3.1",
     "gatsby-plugin-offline": "^3.2.2",
     "gatsby-plugin-react-helmet": "^3.3.1",
