New : mui5 and updates

--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
   },
   "dependencies": {
     "@browniebroke/gatsby-image-gallery": "^6.2.2",
-    "@emotion/react": "^11.4.0",
-    "@emotion/styled": "^11.3.0",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "@mui/icons-material": "^5.2.0",
+    "@mui/material": "^5.2.2",
+    "@mui/styles": "^5.2.2",
     "browser-lang": "^0.1.0",
     "css-element-queries": "^1.2.3",
     "framer-motion": "^3.2.1",
@@ -43,7 +44,7 @@
     "gatsby-plugin-extract-image-colors": "0.0.14",
     "gatsby-plugin-image": "^1.10.1",
     "gatsby-plugin-manifest": "^3.10.0",
-    "gatsby-plugin-material-ui": "^3.0.1",
+    "gatsby-plugin-material-ui": "^4.0.2",
     "gatsby-plugin-mdx": "^2.10.1",
     "gatsby-plugin-nprogress": "^3.10.0",
     "gatsby-plugin-offline": "^4.10.0",
