--- a/package.json
+++ b/package.json
@@ -23,52 +23,51 @@
     "extends": "react-app"
   },
   "dependencies": {
-    "@browniebroke/gatsby-image-gallery": "^6.2.2",
+    "@browniebroke/gatsby-image-gallery": "^8.1.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mdx-js/mdx": "^1.6.22",
-    "@mdx-js/react": "^1.6.22",
+    "@mdx-js/mdx": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
     "@mui/icons-material": "^5.14.6",
     "@mui/material": "^5.14.6",
-    "@mui/styles": "^5.14.6",
     "browser-lang": "^0.1.0",
     "css-element-queries": "^1.2.3",
     "framer-motion": "^3.2.1",
-    "gatsby": "^4.24.0",
+    "gatsby": "^5.12.3",
     "gatsby-background-image": "^1.5.3",
-    "gatsby-image": "^3.10.0",
-    "gatsby-image-background-slider": "0.0.2",
-    "gatsby-link": "^3.10.0",
-    "gatsby-plugin-catch-links": "^3.10.0",
-    "gatsby-plugin-emotion": "^6.10.0",
+    "gatsby-core-utils": "^4.12.0",
+    "gatsby-image-background-slider": "0.0.4",
+    "gatsby-link": "^5.12.0",
+    "gatsby-plugin-catch-links": "^5.12.0",
+    "gatsby-plugin-emotion": "^8.12.0",
     "gatsby-plugin-extract-image-colors": "0.0.14",
-    "gatsby-plugin-image": "^1.10.1",
-    "gatsby-plugin-manifest": "^3.10.0",
+    "gatsby-plugin-image": "^3.12.0",
+    "gatsby-plugin-manifest": "^5.12.0",
     "gatsby-plugin-material-ui": "^4.0.2",
-    "gatsby-plugin-mdx": "^2.10.1",
-    "gatsby-plugin-nprogress": "^3.10.0",
-    "gatsby-plugin-offline": "^4.10.0",
-    "gatsby-plugin-react-helmet": "^4.10.0",
+    "gatsby-plugin-mdx": "^5.12.0",
+    "gatsby-plugin-nprogress": "^5.12.0",
+    "gatsby-plugin-offline": "^6.12.0",
+    "gatsby-plugin-react-helmet": "^6.12.0",
     "gatsby-plugin-robots-txt": "^1.6.8",
-    "gatsby-plugin-sharp": "^4.0.0",
-    "gatsby-plugin-sitemap": "^4.6.0",
-    "gatsby-react-router-scroll": "^4.10.0",
-    "gatsby-remark-copy-linked-files": "^4.7.0",
-    "gatsby-remark-images": "^5.7.0",
-    "gatsby-remark-responsive-iframe": "^4.7.0",
-    "gatsby-source-filesystem": "^3.10.0",
+    "gatsby-plugin-sharp": "^5.12.0",
+    "gatsby-plugin-sitemap": "^6.12.0",
+    "gatsby-react-router-scroll": "^6.12.0",
+    "gatsby-remark-copy-linked-files": "^6.12.0",
+    "gatsby-remark-images": "^7.12.0",
+    "gatsby-remark-responsive-iframe": "^6.12.0",
+    "gatsby-source-filesystem": "^5.12.0",
     "gatsby-source-ical": "1.1.0",
-    "gatsby-transformer-remark": "^4.7.0",
-    "gatsby-transformer-sharp": "^4.0.0",
-    "gbimage-bridge": "^0.1.4",
+    "gatsby-transformer-remark": "^6.12.0",
+    "gatsby-transformer-sharp": "^5.12.0",
+    "gbimage-bridge": "^0.2.2",
     "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-image-lightbox": "^5.1.4",
     "redux": "^4.1.0",
-    "rehype-react": "^6.2.1",
-    "typescript": "^4.3.5"
+    "rehype-react": "^7.2.0",
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
