--- a/package.json
+++ b/package.json
@@ -70,6 +70,10 @@
     "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "@types/node": "^20.3.3",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "typescript": "^5.1.6",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.3.0",
     "babel-preset-gatsby": "^1.15.0",
