--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "react-image-lightbox": "^5.1.4",
     "redux": "^4.1.0",
     "rehype-react": "^7.2.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
     "@types/node": "^20.3.3",
