New : restore navbar

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "maxime-touroute-portfolio",
-  "description": "Maxime Touroute Portfolio",
+  "name": "reveality-website",
+  "description": "Reveality Website",
   "version": "3.0.0",
   "author": "Maxime Touroute <maxime.touroute@gmail.com>",
   "licence": "MIT",
