--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,6 +1,3 @@
 {
-  "*.{js,jsx,css,scss,json,md}": [
-      "prettier --write",
-      "git add"
-    ]
+  "*.{js,jsx,css,scss,json,md}": ["prettier --write", "git add"]
 }
