--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "develop": "gatsby develop",
     "format": "prettier --write '**/*.js' '**/*.ts' '**/*.tsx'",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "gatsby build && gh-pages -d public -b master",
+    "deploy": "gatsby build && gh-pages -d public -b public",
     "clean": "gatsby clean",
     "upgrade-interactive": "npm-check --update",
     "pre-commit": "lint-staged",
